# api/controllers/weather.js
@@ -13,6 +13,17 @@
 var util = require('util');
 var request = require('request');
 
+var netatmo = require('netatmo');
+ 
+var auth = {
+  "client_id": process.env.NETATMO_CLIENT_ID,
+  "client_secret": process.env.NETATMO_CLIENT_SECRET,
+  "username": process.env.NETATMO_USERNAME,
+  "password": process.env.NETATMO_PASSWORD,
+};
+
+var NETATMO_DEVICE_ID = process.env.NETATMO_DEVICE_ID;
+ 
 /*
  Once you 'require' a module you can reference the things that it exports.  These are defined in module.exports.
 
@@ -25,8 +36,9 @@ var request = require('request');
   In the starter/skeleton project the 'get' operation on the '/hello' path has an operationId named 'hello'.  Here,
   we specify that in the exports of this module that 'hello' maps to the function named 'hello'
  */
+
 module.exports = {
-  status: status,
+  info: info,
 };
 
 /*
@@ -36,9 +48,32 @@ module.exports = {
   Param 2: a handle to the response object
  */
 
-function status(req, res) {
-  var url = "https://status.mfgt.ch/status-api.php"
-  request({url: url, json: true}, function(error, response, body) {
-    res.json(body);
+
+function addToResult(out, dd) {
+  var valFilter = function(val) {
+    var FILTER = ['Temperature', 'Humidity', 'WindAngle', 'WindStrength', 'GustAngle', 'GustStrength', 'Pressure'];
+    if (FILTER.indexOf(val) > -1) {
+      out[val] = dd[val];
+    }
+  }
+  Object.keys(dd).map(valFilter);
+}
+
+function info(req, res) {
+  var api = new netatmo(auth);
+  api.getStationsData(function(err, devices) {
+    if (err) { 
+      res.json({});
+    } else {
+      var out = {};
+      out.last_update = devices[0].dashboard_data.time_utc;
+      addToResult(out, devices[0].dashboard_data);
+      var mods = devices[0].modules;
+      for (var m in mods) {
+        var dd = mods[m].dashboard_data;
+        addToResult(out, dd);
+      };
+      res.json(out);
+    }
   });
 }
